# Console-Runners

./: .gitignore  CMakeLists.txt  Chinese-Tutorial.md  README.md
Release/: ConsoleRunners
src/: main.c
src/include/: Game.c  Game.h  Globals.h  ScoreBoard.c  ScoreBoard.h
src/include/GUI/: ButtonGroup.c  ButtonGroup.h  ProgressBar.c  ProgressBar.h
src/include/GameElements/: Runner.c  Runner.h
src/include/basics/: CollisionBox.h  Definitions.h  Renderer.c  Renderer.h  State.c  State.h  StateStack.c  StateStack.h  renderer.c  renderer.h
src/include/basics/boxchar/: boxchar.h
src/include/elements/: Obstacle.c  Obstacle.h  PickUp.c  PickUp.h  Runner.c  Runner.h
src/include/resources/obstacles/: HighBarrier.h  HollowHighBarrier.h  HollowLowBarrier.h  LowBarrier.h  ObstacleList.h
src/include/resources/pickups/: Coin.h  Invincible.h  PickUpList.h  SuperCoin.h
src/include/resources/runners/: Basical.h  Final.h  Hat.h  Kid.h  Rainbow.h  RunnerList.h  Steel.h  Triangle.h  basical.h
src/include/states/: GameState.c  InfoState.c  MenuState.c  PauseState.c  ReviveState.c  StoreState.c
